--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>profile-pivot-path</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Ralph Bautista</title>
+    <meta name="description" content="Ralph Bautista — product and organizational leader." />
+    <meta name="author" content="Ralph Bautista" />
 
-    <meta property="og:title" content="profile-pivot-path" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon / App Icons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+
+    <meta property="og:title" content="Ralph Bautista" />
+    <meta property="og:description" content="Product and organizational leader bridging strategy and execution." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ralphhhbenedict" />
+    <meta name="twitter:image" content="/favicon.png" />
   </head>
 
   <body>
