--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=rb2" />
   <link rel="apple-touch-icon" href="/favicon.png?v=rb2" />
 
-  <meta property="og:title" content="Ralph Bautista" />
-  <meta property="og:description" content="Product and organizational leader bridging strategy and execution." />
+  <meta property="og:title" content="Ralph Bautista — The Swiss Army Knife Your Company Needs" />
+  <meta property="og:description" content="8+ years as a PM. From IC to Senior Director to Founder/CEO. I do both: the strategy AND the systems to scale it." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/favicon.png" />
+  <meta property="og:url" content="https://ralphhhbenedict.com" />
+  <meta property="og:image" content="https://ralphhhbenedict.com/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@ralphhhbenedict" />
-  <meta name="twitter:image" content="/favicon.png" />
+  <meta name="twitter:title" content="Ralph Bautista — The Swiss Army Knife Your Company Needs" />
+  <meta name="twitter:description" content="8+ years as a PM. From IC to Senior Director to Founder/CEO. I do both: the strategy AND the systems to scale it." />
+  <meta name="twitter:image" content="https://ralphhhbenedict.com/og-image.png" />
 </head>
 
 <body>
